fixed packercompile and packersync

--- a/roles/neovim/tasks/main.yml
+++ b/roles/neovim/tasks/main.yml
@@ -31,4 +31,4 @@
 
 - name: Install Neovim Plugins
   tags: neovim
-  shell: vim --headless -c 'autocmd User PackerComplete quitall' -c 'PackerSync'
+  shell: vim --headless -c "PackerCompile" -c "PackerSync" -c "qa"
