added bspwm config

--- a/roles/core/tasks/main.yml
+++ b/roles/core/tasks/main.yml
@@ -1,16 +1,25 @@
 ---
 - name: Install core packages
+  tags: core
   package:
     name:
       - git
       - stow
       - unclutter
 
+- name: Install base-devel
+  tags: core
+  package:
+    name: base-devel
+  when: ansible_distribution == "Archlinux"
+
 - name: Check OS
+  tags: core
   shell: cat /etc/os-release | head -n 1
   register: linux_distro
 
 - name: Install Archlinux support
+  tags: core
   package:
     name:
       - archlinux-keyring
@@ -19,14 +28,12 @@
   when: linux_distro.stdout == 'NAME="Artix Linux"'
 
 - name: Copy pacman.conf
+  tags: core
+  become: yes
   copy: src=./etc/pacman.conf dest=/etc/pacman.conf
   when: linux_distro.stdout == 'NAME="Artix Linux"'
 
-- name: Install base-devel
-  package:
-    name: base-devel
-  when: ansible_distribution == "Archlinux"
-
 - name: Install paru if not already installed
+  tags: core
   shell: if [ which paru == "paru not found" ]; then git clone https://aur.archlinux.org/paru.git $HOME/paru && (cd $HOME/paru; makepkg -si) && rm -rf $HOME/paru; fi
   when: ansible_distribution == "Archlinux"
