--- a/dotfiles/.config/kitty/kitty.conf
+++ b/dotfiles/.config/kitty/kitty.conf
@@ -6,10 +6,12 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Ubuntu Mono Nerd Font
+font_family      Ubuntu Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
+
+symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0C8,U+E0CA,U+E0CC-U+E0D2,U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E62F,U+E700-U+E7C5,U+F000-U+F2E0,U+F300-U+F31C,U+F400-U+F4A9,U+F500-U+F8FF Symbols Nerd Font
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -625,7 +627,7 @@ visual_bell_color none
 #: selection background color. If you feel that the visual bell is too
 #: bright, you can set it to a darker color.
 
-window_alert_on_bell yes
+window_alert_on_bell no
 
 #: Request window attention on bell. Makes the dock icon bounce on
 #: macOS or the taskbar flash on linux.
@@ -963,16 +965,35 @@ tab_bar_margin_color none
 
 #: }}}
 
-background_opacity 1.0
-background_image none
-background_image_layout tiled
-background_image_linear no
-background_tint 0.0
+#: Appearance {{{
 
-dynamic_background_opacity no
+# Tango Dark
 
+background_opacity 0.9
+dim_opacity 1.0
 
-dim_opacity 0.75
+background            #000000
+foreground            #babdb6
+color0                #000000
+color8                #545753
+color1                #cc0000
+color9                #ef2828
+color2                #4e9a05
+color10               #8ae234
+color3                #c4a000
+color11               #fce94e
+color4                #3464a4
+color12               #719ecf
+color5                #74507a
+color13               #ad7ea7
+color6                #05989a
+color14               #34e2e2
+color7                #d3d7cf
+color15               #ededec
+selection_foreground  #000000
+selection_background  #b4d5ff
+
+#: }}}
 
 selection_foreground #000000
 selection_background #fffacd
@@ -2010,25 +2031,3 @@ map shift+cmd+/ open_url https://sw.kovidgoyal.net/kitty/
 
 #: }}}
 
-# Tango Dark
-
-background            #000000
-foreground            #babdb6
-selection_background  #b4d5ff
-color0                #000000
-color8                #545753
-color1                #cc0000
-color9                #ef2828
-color2                #4e9a05
-color10               #8ae234
-color3                #c4a000
-color11               #fce94e
-color4                #3464a4
-color12               #719ecf
-color5                #74507a
-color13               #ad7ea7
-color6                #05989a
-color14               #34e2e2
-color7                #d3d7cf
-color15               #ededec
-selection_foreground #000000
