--- a/dotfiles/.config/kitty/kitty.conf
+++ b/dotfiles/.config/kitty/kitty.conf
@@ -13,22 +13,7 @@ bold_italic_font auto
 
 symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0C8,U+E0CA,U+E0CC-U+E0D2,U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E62F,U+E700-U+E7C5,U+F000-U+F2E0,U+F300-U+F31C,U+F400-U+F4A9,U+F500-U+F8FF Symbols Nerd Font
 
-#: You can specify different fonts for the bold/italic/bold-italic
-#: variants. To get a full list of supported fonts use the `kitty
-#: +list-fonts` command. By default they are derived automatically, by
-#: the OSes font system. When bold_font or bold_italic_font is set to
-#: auto on macOS, the priority of bold fonts is semi-bold, bold,
-#: heavy. Setting them manually is useful for font families that have
-#: many weight variants like Book, Medium, Thick, etc. For example::
-
-#:     font_family      Operator Mono Book
-#:     bold_font        Operator Mono Medium
-#:     italic_font      Operator Mono Book Italic
-#:     bold_italic_font Operator Mono Medium Italic
-
 font_size 25.0
-
-#: Font size (in pts)
 
 force_ltr no
 
@@ -973,7 +958,7 @@ background_opacity 0.9
 dim_opacity 1.0
 
 background            #000000
-foreground            #babdb6
+foreground            #ffffff
 color0                #000000
 color8                #545753
 color1                #cc0000
