--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -4,6 +4,8 @@ set-option -g prefix C-f
 set-option -g repeat-time 0
 
 set -ga terminal-overrides ",xterm-256color*:Tc"
+#set -g terminal-override "rxvt-unicode*:sitm@,ritm@"
+#set -g terminal-override "*-*:Tc"
 
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
