--- a/dotfiles/.config/i3status/config
+++ b/dotfiles/.config/i3status/config
@@ -16,7 +16,7 @@ order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery all"
 order += "disk /"
-order += "load"
+#order += "load"
 order += "memory"
 order += "tztime local"
 
