--- a/dotfiles/.config/i3/config
+++ b/dotfiles/.config/i3/config
@@ -120,17 +120,22 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Shift+q exec "logout"
 
 # resize window (you can also use the mouse for that)
-mode "resize" {
-        bindsym $mod+l resize shrink width 10 px or 10 ppt
-        bindsym $mod+k resize grow height 10 px or 10 ppt
-        bindsym $mod+j resize shrink height 10 px or 10 ppt
-        bindsym $mod+h resize grow width 10 px or 10 ppt
+bindsym $mod+i resize shrink width 10 px or 10 ppt
+bindsym $mod+u resize grow width 10 px or 10 ppt
+bindsym $mod+Shift+i resize shrink height 10 px or 10 ppt
+bindsym $mod+Shift+u resize grow height 10 px or 10 ppt
 
-        # back to normal: Enter or Escape or $mod+r
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
-}
+#mode "resize" {
+#        bindsym $mod+l resize shrink width 10 px or 10 ppt
+#        bindsym $mod+k resize grow height 10 px or 10 ppt
+#        bindsym $mod+j resize shrink height 10 px or 10 ppt
+#        bindsym $mod+h resize grow width 10 px or 10 ppt
+#
+#        # back to normal: Enter or Escape or $mod+r
+#        bindsym Return mode "default"
+#        bindsym Escape mode "default"
+#        bindsym $mod+r mode "default"
+#}
 
 bindsym $mod+r mode "resize"
 
