--- a/dotfiles/.config/i3status/config
+++ b/dotfiles/.config/i3status/config
@@ -13,11 +13,13 @@ general {
 
 #order += "ipv6"
 order += "wireless _first_"
-order += "ethernet _first_"
+order += "volume master"
+#order += "ethernet _first_"
 order += "battery all"
-order += "disk /"
+#order += "disk /"
 #order += "load"
 order += "memory"
+order += "cpu_usage"
 order += "tztime local"
 
 wireless _first_ {
@@ -25,13 +27,18 @@ wireless _first_ {
         format_down = "W: down"
 }
 
-# ethernet _first_ {
-#         format_up = "E: %ip (%speed)"
-#         format_down = "E: down"
-# }
+ethernet _first_ {
+        format_up = "E: %ip (%speed)"
+        format_down = "E: down"
+}
 
 battery all {
         format = "%status %percentage %remaining"
+        format_down = "No battery"
+        status_chr = "⚡ CHR"
+        status_bat = "🔋 BAT"
+        status_unk = "? UNK"
+        status_full = "FULL"
 }
 
 disk "/" {
@@ -50,4 +57,16 @@ memory {
 
 tztime local {
         format = "%Y-%m-%d %H:%M:%S"
+}
+
+volume master {
+    format = "  %volume"
+    format_muted = "  "
+    device = "default"
+    mixer = "Master"
+    mixer_idx = 0
+}
+
+cpu_usage {
+    format = "CPU %usage"
 }
