--- a/dotfiles/.config/i3status/config
+++ b/dotfiles/.config/i3status/config
@@ -35,7 +35,7 @@ ethernet _first_ {
 battery all {
         format = "%status %percentage %remaining"
         format_down = "No battery"
-        status_chr = "⚡ CHR"
+        status_chr = " CHR"
         status_bat = "🔋 BAT"
         status_unk = "? UNK"
         status_full = "FULL"
