--- a/dotfiles/.config/i3/config
+++ b/dotfiles/.config/i3/config
@@ -32,6 +32,7 @@ floating_modifier $mod
 # shortcuts for programs
 bindsym $mod+Shift+Return exec "$(cat $HOME/.local/share/terminal_emulator)"
 bindsym $mod+Shift+w exec google
+bindsym $mod+Shift+e exec emacs
 bindsym $mod+w exec visitWebsite
 
 # kill focused window
@@ -112,8 +113,6 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-# reload the configuration file
-bindsym $mod+Shift+e reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
