--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-dotfiles/.config/nvim/plugin/packer_compiled.lua
-dotfiles/.emacs.d/elpa/
-dotfiles/.emacs.d/eln-cache/
+packer_compiled.lua
+elpa/
+eln-cache/
