--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-packer_compiled.lua
-elpa/
-eln-cache/
+dotfiles/.config/nvim/plugin/packer_compiled.lua
+dotfiles/.emacs.d/elpa/
+dotfiles/.emacs.d/eln-cache/
