Included zsh-theme

--- a/roles/terminal/tasks/main.yml
+++ b/roles/terminal/tasks/main.yml
@@ -3,7 +3,7 @@
   tags: terminal
   package:
     name:
-      - urxvt-unicode
+      - rxvt-unicode
       - urxvt-perls
       - perl
       - tmux
@@ -28,23 +28,27 @@
   tags: terminal
   stat:
     path: "$HOME/.oh-my-zsh"
-    register: oh_my_zsh_installed
+  register: oh_my_zsh_installed
 
 - name: Install oh-my-zsh
   tags: terminal
   shell: sh -c "$(wget -O- https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
   when: not oh_my_zsh_installed.stat.exists
 
+- name: Install zsh-theme
+  tags: terminal
+  copy: src="oh-my-zsh/kiku.zsh-theme" dest="$HOME/.oh-my-zsh/themes/kiku.zsh-theme"
+
 - name: Check if .zshrc.pre-oh-my-zsh exists
   tags: terminal
   stat:
     path: "$HOME/.zshrc.pre-oh-my-zsh"
-    register: zshrc_pre_installed
+  register: zshrc_pre_installed
 
 - name: Remove .zshrc.pre-oh-my-zsh
   tags: terminal
   shell: mv $HOME/.zshrc.pre-oh-my-zsh $HOME/.zshrc
-  when: not zshrc_pre_installed.stat.exists
+  when: zshrc_pre_installed.stat.exists
 
 - name: Copy fonts
   tags: terminal, font
