--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -53,7 +53,7 @@ set-option -g history-limit 64096
 
 set -sg escape-time 10
 
-#set -g status-style 'bg=#333333 fg=#5eacd3'
+##set -g status-style 'bg=#333333 fg=#5eacd3'
 set -g status-style 'bg=#0C0D0C fg=#5eacd3'
 set -g status-right '#{=21:pane_title}  #(echo BAT $(acpi --battery | grep -o -E "(..%)"))  %R'
 
