--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -54,8 +54,9 @@ set-option -g history-limit 64096
 set -sg escape-time 10
 
 ##set -g status-style 'bg=#333333 fg=#5eacd3'
-set -g status-style 'bg=#0C0D0C fg=#5eacd3'
-set -g status-right '#{=21:pane_title}  #(echo BAT $(acpi --battery | grep -o -E "(..%)"))  %R'
+
+#set -g status-style 'bg=#0C0D0C fg=#5eacd3'
+#set -g status-right '#{=21:pane_title}  #(echo BAT $(acpi --battery | grep -o -E "(..%)"))  %R'
 
 # allow the title bar to adapt to whatever host you connect to
 set -g set-titles on
