--- a/roles/emacs/tasks/main.yml
+++ b/roles/emacs/tasks/main.yml
@@ -1,5 +1,37 @@
 ---
-- name: Install emacs native comp package
+- name: check if emacs is installed
+  tags: emacs
+  shell: which emacs
+  register: emacs_installed
+
+- name: clone emacs
+  tags: emacs
+  shell: if [ ! -d "$HOME/emacs-src" ]; then git clone git clone git://git.savannah.gnu.org/emacs.git $HOME/emacs-src; fi
+  when: '"not found" in emacs_installed.stdout'
+
+- name: Install emacs build dependencies
   tags: emacs
   package:
-    name: emacs-nativecomp
+    name:
+      - libgccjit
+  when: '"not found" in emacs_installed.stdout'
+
+- name: run autogen
+  tags: emacs
+  shell: (cd $HOME/emacs-src; ./autogen.sh)
+  when: '"not found" in emacs_installed.stdout'
+
+- name: run configure
+  tags: emacs
+  shell: (cd $HOME/emacs-src; ./configure --with-cairo --with-modules --without-compress-install --with-x-toolkit=no --with-gnutls --without-gconf --without-xwidgets --without-toolkit-scroll-bars --without-xaw3d --without-gsettings --with-mailutils --with-native-compilation --with-json --with-harfbuzz --with-imagemagick --with-jpeg --with-png --with-rsvg --with-tiff --with-wide-int --with-xft --with-xml2 --with-xpm CFLAGS="-O3 -mtune=native -march=native -fomit-frame-pointer" prefix=/usr/local)
+  when: '"not found" in emacs_installed.stdout'
+
+- name: make emacs
+  tags: emacs
+  shell: make -C $HOME/emacs-src -j$(nproc)
+  when: '"not found" in emacs_installed.stdout'
+
+- name: make install emacs
+  tags: emacs
+  shell: sudo make -C $HOME/emacs-src install
+  when: '"not found" in emacs_installed.stdout'
