--- a/dotfiles/.config/i3/config
+++ b/dotfiles/.config/i3/config
@@ -58,13 +58,16 @@ bindsym $mod+e layout toggle split
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
 
+# toggle focus tiling / floating
+bindsym $mod+space focus mode_toggle
+
 # change focus between tiling / floating windows
 bindcode $mod+23 focus mode_toggle
 
 # focus the parent container
 # bindsym $mod+a focus parent
 # focus the child container
-#bindsym $mod+d focus child
+# bindsym $mod+d focus child
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
