removed [emacs]multiedit, removed [i3status]cpu_usage

--- a/dotfiles/.config/i3status/config
+++ b/dotfiles/.config/i3status/config
@@ -19,7 +19,8 @@ order += "battery all"
 #order += "disk /"
 #order += "load"
 order += "memory"
-order += "cpu_usage"
+#order += "cpu_usage"
+#order += "disk /"
 order += "tztime local"
 
 wireless _first_ {
