a LOT of changes

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -43,6 +43,7 @@ bind -r C-l resize-pane -R 5
 bind -r v split-window -h -p 50
 bind -r ö split-window -v -p 50
 bind -r C-t new-window 
+bind -r t new-window 
 bind -r C-q kill-window
 
 #### basic settings
