added lspinstall to neovim config and other things

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -42,7 +42,7 @@ bind -r C-l resize-pane -R 5
 
 bind -r v split-window -h -p 50
 bind -r ö split-window -v -p 50
-bind -r C-t new-window 
+bind -r C-t new-window -c "#{pane_current_path}" # really helpful
 bind -r t new-window 
 bind -r C-q kill-window
 
