tmux compile script, st terminal clickable links patch

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -12,8 +12,9 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 
 # Reload settings
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-# Open current directory
-bind -r e kill-pane -a
+
+bind -r e kill-window
+bind -r C-o kill-pane -a
 bind -r C-e kill-pane
 bind -r ü kill-session -a
 
@@ -67,7 +68,7 @@ set -g set-titles-string "#T"
 bind-key -r i run-shell "tmux neww tmux-cht.sh"
 
 # search stackoverflow using so
-bind-key -r C-i run-shell "tmux neww tmux-so"
+bind-key -r C-i run-shell "tmux neww tmux-so.sh"
 
 # search internet using w3m
 bind-key -r g run-shell "tmux neww search"
@@ -75,7 +76,11 @@ bind-key -r g run-shell "tmux neww search"
 # tmux sessionizer
 bind-key -r u run-shell "tmux neww tmux-sessionizer"
 
-# change session
-bind -r f split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+# run compile and recompile command in current directory this script is using theprimeagen's tmux-windowizer script
+bind-key -r C-m display-popup -E -y 100% -w 100% -h 10% "tmux-compile.sh"
+bind-key -r C-r run-shell "tmux-compile.sh -r"
 
 bind -r o last-window
+bind -r f switch-client -l
+
+# TODO: create a keybinding for jumping to current directory (where tmux was started in)
