switched to corfu

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -13,8 +13,8 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 # Reload settings
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-bind -r e kill-window
-bind -r C-o kill-pane -a
+bind -r C-o kill-window
+bind -r e kill-pane -a
 bind -r C-e kill-pane
 bind -r ü kill-session -a
 
@@ -45,7 +45,8 @@ bind -r v split-window -h -p 50
 bind -r ö split-window -v -p 50
 bind -r C-t new-window -c "#{pane_current_path}" # really helpful
 bind -r t new-window 
-bind -r C-q kill-window
+bind -r C-u new-window -c "$HOME"
+bind -r C-q kill-window -a
 
 #### basic settings
 
@@ -82,3 +83,4 @@ bind-key -r C-r run-shell "tmux-compile.sh -r"
 
 bind -r o last-window
 bind -r f switch-client -l
+bind -r C-f run-shell "tmux split-window && tmux kill-pane -a"
