changed almost all tmux keybindings and made screenshot script copy

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,6 +1,6 @@
 # action key
 unbind C-b
-set-option -g prefix C-f
+set-option -g prefix C-x
 set-option -g repeat-time 0
 
 set -ga terminal-overrides ",xterm-256color*:Tc"
@@ -14,8 +14,8 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 bind -r C-o kill-window
-bind -r e kill-pane -a
-bind -r C-e kill-pane
+bind -r C-b kill-pane -a
+bind -r . kill-pane
 bind -r ü kill-session -a
 
 # vim-like pane switching
@@ -41,12 +41,12 @@ bind -r C-j resize-pane -D 5
 bind -r C-h resize-pane -L 5
 bind -r C-l resize-pane -R 5
 
-bind -r v split-window -h -p 50
+bind -r C-z split-window -h -p 50
 bind -r ö split-window -v -p 50
 bind -r C-t new-window -c "#{pane_current_path}" # really helpful
-bind -r t new-window 
+bind -r n new-window 
 bind -r C-u new-window -c "$HOME"
-bind -r C-q kill-window -a
+bind -r , kill-window -a
 
 #### basic settings
 
@@ -79,8 +79,7 @@ bind-key -r u run-shell "tmux neww tmux-sessionizer"
 
 # run compile and recompile command in current directory this script is using theprimeagen's tmux-windowizer script
 bind-key -r C-m display-popup -E -y 100% -w 100% -h 10% "tmux-compile.sh"
-bind-key -r C-r run-shell "tmux-compile.sh -r"
+bind-key -r C-n run-shell "tmux-compile.sh -r"
 
 bind -r o last-window
-bind -r f switch-client -l
-bind -r C-f run-shell "tmux split-window && tmux kill-pane -a"
+bind -r b switch-client -l
