--- a/roles/scripts/tasks/main.yml
+++ b/roles/scripts/tasks/main.yml
@@ -8,6 +8,9 @@
       - w3m
       - xsel
       - xclip
+      - maim
+      - xrectsel
+      - byzanz
 
 - name: Create symlinks for scripts
   tags: scripts
