changed some tmux keymaps again

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -13,16 +13,17 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 # Reload settings
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-bind -r C-o kill-window
-bind -r C-b kill-pane -a
-bind -r . kill-pane
-bind -r ü kill-session -a
-
 # vim-like pane switching
 bind -r k select-pane -U 
 bind -r j select-pane -D 
 bind -r h select-pane -L 
 bind -r l select-pane -R 
+
+# Resizing pane
+bind -r C-k resize-pane -U 5
+bind -r C-j resize-pane -D 5
+bind -r C-h resize-pane -L 5
+bind -r C-l resize-pane -R 5
 
 # vim-like moving
 bind -T copy-mode-vi v send-keys -X begin-selection
@@ -35,18 +36,16 @@ bind-key -n C-S-Right swap-window -t +1 \; next-window
 # switching session
 bind-key -r -n C-s choose-tree
 
-# Resizing pane
-bind -r C-k resize-pane -U 5
-bind -r C-j resize-pane -D 5
-bind -r C-h resize-pane -L 5
-bind -r C-l resize-pane -R 5
-
 bind -r C-z split-window -h -p 50
 bind -r ö split-window -v -p 50
-bind -r C-t new-window -c "#{pane_current_path}" # really helpful
+bind -r - new-window -c "#{pane_current_path}" # really helpful
 bind -r n new-window 
 bind -r C-u new-window -c "$HOME"
 bind -r , kill-window -a
+bind -r C-o kill-window
+bind -r C-b kill-pane -a
+bind -r . kill-pane
+bind -r ü kill-session -a
 
 #### basic settings
 
@@ -83,3 +82,4 @@ bind-key -r C-n run-shell "tmux-compile.sh -r"
 
 bind -r o last-window
 bind -r b switch-client -l
+bind -r C-x copy-mode
