--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -14,24 +14,39 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # vim-like pane switching
-bind -r k select-pane -U 
-bind -r j select-pane -D 
-bind -r h select-pane -L 
-bind -r l select-pane -R 
+# bind -r k select-pane -U 
+# bind -r j select-pane -D 
+# bind -r h select-pane -L 
+# bind -r l select-pane -R 
 
-# Resizing pane
-bind -r C-k resize-pane -U 5
-bind -r C-j resize-pane -D 5
-bind -r C-h resize-pane -L 5
-bind -r C-l resize-pane -R 5
+# # Resizing pane
+# bind -r C-k resize-pane -U 5
+# bind -r C-j resize-pane -D 5
+# bind -r C-h resize-pane -L 5
+# bind -r C-l resize-pane -R 5
+
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+
+# navigation
+bind-key 'h' if-shell "$is_vim" 'send-keys C-x h'  'select-pane -L'
+bind-key 'j' if-shell "$is_vim" 'send-keys C-x j'  'select-pane -D'
+bind-key 'k' if-shell "$is_vim" 'send-keys C-x k'  'select-pane -U'
+bind-key 'l' if-shell "$is_vim" 'send-keys C-x l'  'select-pane -R'
+
+# resizing
+bind-key 'C-h' if-shell "$is_vim" 'send-keys C-x C-h'  'resize-pane -L 1'
+bind-key 'C-j' if-shell "$is_vim" 'send-keys C-x C-j'  'resize-pane -D 1'
+bind-key 'C-k' if-shell "$is_vim" 'send-keys C-x C-k'  'resize-pane -U 1'
+bind-key 'C-l' if-shell "$is_vim" 'send-keys C-x C-l'  'resize-pane -R 1'
+
+# killing
+bind 'C-b' if-shell "$is_vim" 'run-shell "tmux send-keys C-x C-b && tmux kill-pane -a"' 'kill-pane -a'
+bind '.' if-shell "$is_vim" 'send-keys C-x .' 'kill-pane'
 
 # vim-like moving
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-
-# Moving window
-bind-key -n C-S-Left swap-window -t -1 \; previous-window
-bind-key -n C-S-Right swap-window -t +1 \; next-window
 
 # switching session
 bind-key -r -n C-s choose-tree
@@ -43,9 +58,10 @@ bind -r n new-window
 bind -r C-u new-window -c "$HOME"
 bind -r , kill-window -a
 bind -r C-o kill-window
-bind -r C-b kill-pane -a
-bind -r . kill-pane
 bind -r ü kill-session -a
+
+# bind -r C-b kill-pane -a
+# bind -r . kill-pane
 
 #### basic settings
 
@@ -82,4 +98,4 @@ bind-key -r C-n run-shell "tmux-compile.sh -r"
 
 bind -r o last-window
 bind -r b switch-client -l
-bind -r C-x copy-mode
+bind -r c copy-mode
