--- a/dotfiles/.config/kitty/kitty.conf
+++ b/dotfiles/.config/kitty/kitty.conf
@@ -13,7 +13,7 @@ bold_italic_font auto
 
 symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0C8,U+E0CA,U+E0CC-U+E0D2,U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E62F,U+E700-U+E7C5,U+F000-U+F2E0,U+F300-U+F31C,U+F400-U+F4A9,U+F500-U+F8FF Symbols Nerd Font
 
-font_size 25.0
+font_size 20.0
 
 force_ltr no
 
@@ -954,10 +954,11 @@ tab_bar_margin_color none
 
 # Tango Dark
 
-background_opacity 0.9
+background_opacity 1.0
 dim_opacity 1.0
 
-background            #000000
+#background            #000000
+background            #181818
 foreground            #ffffff
 color0                #000000
 color8                #545753
