--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -8,41 +8,47 @@ set -ga terminal-overrides ",xterm-256color*:Tc"
 #set -g terminal-override "*-*:Tc"
 
 set-window-option -g mode-keys vi
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind -r c copy-mode
 
 # Reload settings
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# vim-like pane switching
-# bind -r k select-pane -U 
-# bind -r j select-pane -D 
-# bind -r h select-pane -L 
-# bind -r l select-pane -R 
-
-# # Resizing pane
-# bind -r C-k resize-pane -U 5
-# bind -r C-j resize-pane -D 5
-# bind -r C-h resize-pane -L 5
-# bind -r C-l resize-pane -R 5
-
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-
-# navigation
-bind-key 'h' if-shell "$is_vim" 'send-keys C-x h'  'select-pane -L'
-bind-key 'j' if-shell "$is_vim" 'send-keys C-x j'  'select-pane -D'
-bind-key 'k' if-shell "$is_vim" 'send-keys C-x k'  'select-pane -U'
-bind-key 'l' if-shell "$is_vim" 'send-keys C-x l'  'select-pane -R'
-
-# resizing
-bind-key 'C-h' if-shell "$is_vim" 'send-keys C-x C-h'  'resize-pane -L 1'
-bind-key 'C-j' if-shell "$is_vim" 'send-keys C-x C-j'  'resize-pane -D 1'
-bind-key 'C-k' if-shell "$is_vim" 'send-keys C-x C-k'  'resize-pane -U 1'
-bind-key 'C-l' if-shell "$is_vim" 'send-keys C-x C-l'  'resize-pane -R 1'
+# ### vim + tmux = <3
+# is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+#     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+#
+# # navigation
+# bind-key 'h' if-shell "$is_vim" 'send-keys C-x h'  'select-pane -L'
+# bind-key 'j' if-shell "$is_vim" 'send-keys C-x j'  'select-pane -D'
+# bind-key 'k' if-shell "$is_vim" 'send-keys C-x k'  'select-pane -U'
+# bind-key 'l' if-shell "$is_vim" 'send-keys C-x l'  'select-pane -R'
+#
+# # resizing
+# bind-key 'C-h' if-shell "$is_vim" 'send-keys C-x C-h'  'resize-pane -L 4'
+# bind-key 'C-j' if-shell "$is_vim" 'send-keys C-x C-j'  'resize-pane -D 4'
+# bind-key 'C-k' if-shell "$is_vim" 'send-keys C-x C-k'  'resize-pane -U 4'
+# bind-key 'C-l' if-shell "$is_vim" 'send-keys C-x C-l'  'resize-pane -R 4'
 
 # killing
-bind 'C-b' if-shell "$is_vim" 'run-shell "tmux send-keys C-x C-b && tmux kill-pane -a"' 'kill-pane -a'
-bind '.' if-shell "$is_vim" 'send-keys C-x .' 'kill-pane'
+# bind 'C-b' if-shell "$is_vim" 'run-shell "tmux send-keys C-x C-b && tmux kill-pane -a"' 'kill-pane -a'
+# bind '.' if-shell "$is_vim" 'send-keys C-x .' 'kill-pane'
+
+## Panes
+# navigation
+bind-key 'h' select-pane -L
+bind-key 'j' select-pane -D
+bind-key 'k' select-pane -U
+bind-key 'l' select-pane -R
+
+# resizing
+bind-key 'C-h' resize-pane -L 4
+bind-key 'C-j' resize-pane -D 4
+bind-key 'C-k' resize-pane -U 4
+bind-key 'C-l' resize-pane -R 4
+
+# killing
+bind 'C-b' kill-pane -a
+bind '.' kill-pane
 
 # vim-like moving
 bind -T copy-mode-vi v send-keys -X begin-selection
@@ -58,10 +64,9 @@ bind -r n new-window
 bind -r C-u new-window -c "$HOME"
 bind -r , kill-window -a
 bind -r C-o kill-window
+bind -r o last-window
+bind -r b switch-client -l
 bind -r ü kill-session -a
-
-# bind -r C-b kill-pane -a
-# bind -r . kill-pane
 
 #### basic settings
 
@@ -95,7 +100,3 @@ bind-key -r u run-shell "tmux neww tmux-sessionizer"
 # run compile and recompile command in current directory this script is using theprimeagen's tmux-windowizer script
 bind-key -r C-m display-popup -E -y 100% -w 100% -h 10% "tmux-compile.sh"
 bind-key -r C-n run-shell "tmux-compile.sh -r"
-
-bind -r o last-window
-bind -r b switch-client -l
-bind -r c copy-mode
