--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -100,3 +100,4 @@ bind-key -r u run-shell "tmux neww tmux-sessionizer"
 # run compile and recompile command in current directory this script is using theprimeagen's tmux-windowizer script
 bind-key -r C-m display-popup -E -y 100% -w 100% -h 10% "tmux-compile.sh"
 bind-key -r C-n run-shell "tmux-compile.sh -r"
+bind-key -r C-x run-shell "tmux split-window -v -p 50 && tmux kill-pan -a" # reset window
