more keybindings focusing on removing control

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -4,34 +4,12 @@ set-option -g prefix C-x
 set-option -g repeat-time 0
 
 set -ga terminal-overrides ",xterm-256color*:Tc"
-#set -g terminal-override "rxvt-unicode*:sitm@,ritm@"
-#set -g terminal-override "*-*:Tc"
 
 set-window-option -g mode-keys vi
 bind -r c copy-mode
 
 # Reload settings
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-# ### vim + tmux = <3
-# is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-#     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-#
-# # navigation
-# bind-key 'h' if-shell "$is_vim" 'send-keys C-x h'  'select-pane -L'
-# bind-key 'j' if-shell "$is_vim" 'send-keys C-x j'  'select-pane -D'
-# bind-key 'k' if-shell "$is_vim" 'send-keys C-x k'  'select-pane -U'
-# bind-key 'l' if-shell "$is_vim" 'send-keys C-x l'  'select-pane -R'
-#
-# # resizing
-# bind-key 'C-h' if-shell "$is_vim" 'send-keys C-x C-h'  'resize-pane -L 4'
-# bind-key 'C-j' if-shell "$is_vim" 'send-keys C-x C-j'  'resize-pane -D 4'
-# bind-key 'C-k' if-shell "$is_vim" 'send-keys C-x C-k'  'resize-pane -U 4'
-# bind-key 'C-l' if-shell "$is_vim" 'send-keys C-x C-l'  'resize-pane -R 4'
-
-# killing
-# bind 'C-b' if-shell "$is_vim" 'run-shell "tmux send-keys C-x C-b && tmux kill-pane -a"' 'kill-pane -a'
-# bind '.' if-shell "$is_vim" 'send-keys C-x .' 'kill-pane'
 
 ## Panes
 # navigation
@@ -76,11 +54,6 @@ set-option -g history-limit 64096
 
 set -sg escape-time 10
 
-##set -g status-style 'bg=#333333 fg=#5eacd3'
-
-#set -g status-style 'bg=#0C0D0C fg=#5eacd3'
-#set -g status-right '#{=21:pane_title}  #(echo BAT $(acpi --battery | grep -o -E "(..%)"))  %R'
-
 # allow the title bar to adapt to whatever host you connect to
 set -g set-titles on
 set -g set-titles-string "#T"
@@ -95,9 +68,12 @@ bind-key -r C-i run-shell "tmux neww tmux-so.sh"
 bind-key -r g run-shell "tmux neww search"
 
 # tmux sessionizer
-bind-key -r u run-shell "tmux neww tmux-sessionizer"
+bind-key -r -n C-u run-shell "tmux neww tmux-sessionizer"
 
 # run compile and recompile command in current directory this script is using theprimeagen's tmux-windowizer script
 bind-key -r C-m display-popup -E -y 100% -w 100% -h 10% "tmux-compile.sh"
 bind-key -r C-n run-shell "tmux-compile.sh -r"
 bind-key -r C-x run-shell "tmux split-window -v -p 50 && tmux kill-pan -a" # reset window
+
+#set -g status-style 'bg=#0C0D0C fg=#5eacd3'
+#set -g status-right '#{=21:pane_title}  #(echo BAT $(acpi --battery | grep -o -E "(..%)"))  %R'
