--- a/roles/neovim/tasks/main.yml
+++ b/roles/neovim/tasks/main.yml
@@ -18,13 +18,6 @@
   tags: neovim
   shell: if [ ! -f /usr/local/bin/vim ]; then ln -s $(which nvim) /usr/local/bin/vim; fi
 
-- name: Check if Packer is installed
-  tags: neovim, packer
-  stat:
-    path: "$HOME/.local/share/nvim/site/pack/packer/start/packer.nvim"
-  register: packer_installed
-
 - name: Install Packer
   tags: neovim, packer
-  shell: git clone --depth 1 https://github.com/wbthomason/packer.nvim $HOME/.local/share/nvim/site/pack/packer/start/packer.nvim
-  when: not packer_installed.stat.exists
+  shell: packer_path="$HOME/.local/share/nvim/site/pack/packer/start/packer.nvim"; clone_cmd="git clone --depth 1 https://github.com/wbthomason/packer.nvim"; if [ -d $packer_path ]; then rm -rf $packer_path && eval $clone_cmd $packer_path; else eval $clone_cmd $packer_path; fi
