added mlterm (seems simple, fast and nice)

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -68,7 +68,7 @@ bind-key -r C-i run-shell "tmux neww tmux-so.sh"
 bind-key -r g run-shell "tmux neww search"
 
 # tmux sessionizer
-bind-key -r -n C-u run-shell "tmux neww tmux-sessionizer"
+bind-key -r -n C-f run-shell "tmux neww tmux-sessionizer"
 
 # run compile and recompile command in current directory this script is using theprimeagen's tmux-windowizer script
 bind-key -r C-m display-popup -E -y 100% -w 100% -h 10% "tmux-compile.sh"
