a lot of changes

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -35,8 +35,8 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 # switching session
 bind-key -r -n C-s choose-tree
 
-bind -r C-z split-window -h -p 50
-bind -r ö split-window -v -p 50
+bind -r C-z split-window -v -p 50
+bind -r ö split-window -h -p 50
 bind -r - new-window -c "#{pane_current_path}" # really helpful
 bind -r n new-window 
 bind -r C-u new-window -c "$HOME"
