--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -76,4 +76,4 @@ bind-key -r C-n run-shell "tmux-compile.sh -r"
 bind-key -r C-x run-shell "tmux split-window -v -p 50 && tmux kill-pan -a" # reset window
 
 if-shell -b '[ "$(cat $HOME/.local/share/terminal_emulator)" == "superml" ]' \
-        "set -g status-style 'bg=#0C0D0C fg=#5eacd3'; set -g status-right '#{=21:pane_title}  #(echo BAT $(acpi --battery | grep -o -E \"(..%)\"))  %R'h
+        "set -g status-style 'bg=#0C0D0C fg=#5eacd3'; set -g status-right '#{=21:pane_title}  #(echo BAT $(acpi --battery | grep -o -E \"(..%)\"))  %R'
