--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -75,5 +75,5 @@ bind-key -r C-m display-popup -E -y 100% -w 100% -h 10% "tmux-compile.sh"
 bind-key -r C-n run-shell "tmux-compile.sh -r"
 bind-key -r C-x run-shell "tmux split-window -v -p 50 && tmux kill-pan -a" # reset window
 
-if-shell -b '[ "$(cat $HOME/.local/share/terminal_emulator)" == "superml" ]' \
+if-shell -b '[[ "`cat $HOME/.local/share/terminal_emulator`" == "superml" || "`cat $HOME/.local/share/terminal_emulator`" == "simpleml3" ]]' \
         "set -g status-style 'bg=#0C0D0C fg=#5eacd3'; set -g status-right '#{=21:pane_title}  #(echo BAT $(acpi --battery | grep -o -E \"(..%)\"))  %R'
